--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.navigation { 
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navigation li { margin-right: 2%;}
+
+.navigation li:last-child{ margin-right: 0;}
+
+.navigation li a{ 
+  padding: 10px 0;
+  color: #454545;
+  font-size: 21px;
+  text-decoration: none;
 }
