styling added for navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.navigation { 
+/* .navigation { 
   display: flex;
   justify-content: center;
   list-style-type: none;
@@ -13,4 +13,4 @@
   color: #454545;
   font-size: 21px;
   text-decoration: none;
-}
+} */
